<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    style="@style/rl_root">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="@dimen/img_100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/icon_ledger" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_below="@+id/iv_logo">

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_phone_number"
            style="@style/et_black_style"
            android:hint="@string/mobile_no"
            android:maxLength="10"
            android:inputType="phone" />

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_password"
            android:layout_below="@+id/et_phone_number"
            style="@style/et_black_style"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/margin_10dp"
            android:inputType="textPassword" />


        <simplifii.framework.widgets.CustomFontButton
            android:layout_below="@+id/et_password"
            android:hint="@string/sign_in"
            android:id="@+id/btn_sign_in"
            style="@style/button_style"/>

        <simplifii.framework.widgets.CustomFontButton
            android:layout_below="@+id/btn_sign_in"
            android:hint="@string/register"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_register"
            android:background="@drawable/dark_button_shape"
            style="@style/button_style"/>

        <simplifii.framework.widgets.CustomFontTextView
            android:layout_below="@+id/btn_register"
            style="@style/tv_style"
            android:gravity="center"
            app:customFont="@string/font_bold"
            android:text="@string/forgot_password"/>


    </RelativeLayout>

</RelativeLayout>
