<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/rl_root">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="@dimen/img_100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/icon_ledger" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_marginTop="@dimen/margin_16dp">

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_shop_name"
            style="@style/et_black_style"
            android:hint="@string/shop_name"
            android:inputType="text" />


        <RelativeLayout
            android:id="@+id/rl_shop_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_shop_name"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/rectangle_edittext_shape">


            <Spinner
                android:id="@+id/sp_shop_category"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="10dp">
            </Spinner>

        </RelativeLayout>

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_phone_number"
            style="@style/et_black_style"
            android:layout_below="@+id/rl_shop_category"
            android:hint="@string/mobile_no"
            android:maxLength="10"
            android:inputType="phone" />

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_password"
            style="@style/et_black_style"
            android:layout_below="@+id/et_phone_number"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <simplifii.framework.widgets.CustomFontEditText
            android:id="@+id/et_confirm_password"
            style="@style/et_black_style"
            android:layout_below="@+id/et_password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />


        <simplifii.framework.widgets.CustomFontButton
            android:id="@+id/btn_register"
            style="@style/button_style"
            android:layout_below="@+id/et_confirm_password"
            android:hint="@string/register" />


    </RelativeLayout>

</RelativeLayout>
