<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            style="@style/rl_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_profile_pic"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/profile" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@mipmap/instagram_logo"
                    android:layout_marginLeft="74dp"
                    android:id="@+id/iv_edit_image"
                    android:layout_alignParentBottom="true"
                    android:layout_alignLeft="@+id/iv_profile_pic"
                    android:layout_alignStart="@+id/iv_profile_pic" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_profile_pic"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <simplifii.framework.widgets.CustomFontEditText
                    android:id="@+id/et_account_name"
                    style="@style/et_black_style"
                    android:hint="@string/account_name"
                    android:inputType="text" />

                <simplifii.framework.widgets.CustomFontEditText
                    android:id="@+id/et_account_phone_number"
                    style="@style/et_black_style"
                    android:hint="@string/account_phone_number"
                    android:inputType="number"
                    android:maxLength="10" />

                <simplifii.framework.widgets.CustomFontEditText
                    android:id="@+id/et_alternate_phone_number"
                    style="@style/et_black_style"
                    android:hint="@string/alternate_phone_number"
                    android:inputType="number"
                    android:maxLength="10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="10">


                    <simplifii.framework.widgets.CustomFontTextView
                        android:id="@+id/tv_male"
                        style="@style/tv_simple_style_without_font"
                        android:layout_marginRight="4dp"
                        android:layout_weight="5"
                        android:background="@drawable/rectangle_edittext_shape"
                        android:padding="11dp"
                        android:text="@string/male" />

                    <simplifii.framework.widgets.CustomFontTextView
                        android:id="@+id/tv_female"
                        style="@style/tv_simple_style_without_font"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="5"
                        android:background="@drawable/rectangle_edittext_shape"
                        android:padding="11dp"
                        android:text="@string/female" />
                </LinearLayout>

                <simplifii.framework.widgets.CustomFontEditText
                    android:id="@+id/et_address"
                    style="@style/et_black_style_greater_maxline"
                    android:focusable="false"
                    android:hint="@string/address" />


                <simplifii.framework.widgets.CustomFontButton
                    android:id="@+id/btn_save"
                    style="@style/button_style"
                    android:hint="@string/save" />


            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>